--- a/lab3/hwork3.html
+++ b/lab3/hwork3.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hwork3</title>
     <link rel="stylesheet" href="hwork3.css" />
+    <link
+      rel="shorcut icon"
+      href="https://d3.violet.vn/uploads/previews/document/0/835/119/BOOK1.gif.jpg"
+      type="image/x-icon"
+    />
   </head>
   <body>
     <div class="nha">
@@ -16,16 +21,16 @@
       </div>
       <div class="cha2">
         <div class="chau1">
-          <a href="https://frontend.techmaster.vn/"
+          <a href="https://frontend.techmaster.vn/" target="_blank"
             >Lộ trình đào tạo Web Front End + React (5 tháng)</a
           >
         </div>
         <div class="chau2">
-          <p>Thứ 2, 4, 6</p>
+          <p><i class="fa-regular fa-calendar-days"></i>Thứ 2, 4, 6</p>
           <p>09:00 - 12:00</p>
           <p>Cơ sở Tố Hữu</p>
         </div>
-        <hr>
+        <hr />
         <div class="chau3">
           <a href="">Đăng ký</a>
         </div>
