--- a/lab3/hwork3.html
+++ b/lab3/hwork3.html
@@ -11,8 +11,13 @@
       href="https://d3.violet.vn/uploads/previews/document/0/835/119/BOOK1.gif.jpg"
       type="image/x-icon"
     />
+    <script
+      src="https://fontawesome.com/icons/calendar-days?s=regular&f=classic"
+      crossorigin="fa-regular fa-calendar-day"
+    ></script>
   </head>
   <body>
+    <i class="fa-regular fa-calendar-days"></i>
     <div class="nha">
       <div class="cha1">
         <div class="con1">2022</div>
@@ -21,7 +26,11 @@
       </div>
       <div class="cha2">
         <div class="chau1">
-          <a href="https://frontend.techmaster.vn/" target="_blank"
+          <a
+            href="https://frontend.techmaster.vn/"
+            target="_blank"
+            data-id="hfc"
+            data-type="course"
             >Lộ trình đào tạo Web Front End + React (5 tháng)</a
           >
         </div>
