--- a/lab4/hwork4.html
+++ b/lab4/hwork4.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="vi">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -13,7 +13,9 @@
   </head>
   <body>
     <div class="tong">
-      <h1>Tập Mới Nhất</h1>
+      <a href="https://vuighe.net/tap-moi-nhat">
+        <h1>Tập Mới Nhất</h1>
+      </a>
       <div class="card-tong1">
         <div class="card-img">
           <img
@@ -382,6 +384,599 @@
         </div>
       </div>
       <h1>Phim Hoạt Hình</h1>
+      <div class="card-tong4">
+        <div class="card-img4">
+          <img
+            src="https://s198.imacdn.com/ff/2021/02/20/214199df846ec0be_30a65d21fedd8bb8_667261613823016216068.jpg"
+            alt=""
+          />
+          <div class="name">
+            <p>Đấu La Đại Lục</p>
+            <div class="tap">
+              <p>1.018 lượt xem</p>
+            </div>
+          </div>
+        </div>
+        <div class="card-img4">
+          <img
+            src="https://s198.imacdn.com/ff/2022/07/29/058350bda3ae8893_1e0f63cc8c898646_481681659085319216068.jpg"
+            alt=""
+          />
+          <div class="name">
+            <p>Hataraku Maou-sama!</p>
+            <div class="tap">
+              <p>Tập 22</p>
+              <p>1.018 lượt xem</p>
+            </div>
+          </div>
+        </div>
+        <div class="card-img4">
+          <img
+            src="https://s198.imacdn.com/ff/2022/07/29/92953f4aa6d17c74_f6f5c1f42b708011_379911659084990216068.jpg"
+            alt=""
+          />
+          <div class="name">
+            <p>Hataraku Maou-sama!</p>
+            <div class="tap">
+              <p>Tập 22</p>
+              <p>1.018 lượt xem</p>
+            </div>
+          </div>
+        </div>
+        <div class="card-img4">
+          <img
+            src="https://s198.imacdn.com/ff/2022/05/06/ae317df873ab1426_af71133b21f92e97_50096165179514583816.jpg"
+            alt=""
+          />
+          <div class="name">
+            <p>Hataraku Maou-sama!</p>
+            <div class="tap">
+              <p>Tập 22</p>
+              <p>1.018 lượt xem</p>
+            </div>
+          </div>
+        </div>
+        <div class="card-img4">
+          <img
+            src="https://s198.imacdn.com/ff/2022/08/29/bf57496dd0b58b2b_7d0deda013410706_532961661759472216068.jpg"
+            alt=""
+          />
+          <div class="name">
+            <p>Hataraku Maou-sama!</p>
+            <div class="tap">
+              <p>Tập 22</p>
+              <p>1.018 lượt xem</p>
+            </div>
+          </div>
+        </div>
+        <div class="card-img4">
+          <img
+            src="https://s198.imacdn.com/ff/2022/08/29/4aa48b257b48ff40_cf18b20546cb95fe_617261661759007216068.jpg"
+            alt=""
+          />
+          <div class="name">
+            <p>Hataraku Maou-sama!</p>
+            <div class="tap">
+              <p>Tập 22</p>
+              <p>1.018 lượt xem</p>
+            </div>
+          </div>
+        </div>
+        <div class="card-img4">
+          <img
+            src="https://s198.imacdn.com/ff/2022/08/25/77d025dc371d6201_3a3745f9cb3d8cc6_645331661442694616068.jpg"
+            alt=""
+          />
+          <div class="name">
+            <p>Hataraku Maou-sama!</p>
+            <div class="tap">
+              <p>Tập 22</p>
+              <p>1.018 lượt xem</p>
+            </div>
+          </div>
+        </div>
+        <div class="card-img4">
+          <img
+            src="https://s198.imacdn.com/ff/2022/07/05/7a9ebd022394ea68_8d96964e8ae6331f_2601511657006627516068.jpg"
+            alt=""
+          />
+          <div class="name">
+            <p>Hataraku Maou-sama!</p>
+            <div class="tap">
+              <p>Tập 22</p>
+              <p>1.018 lượt xem</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <h1>Truyện tranh</h1>
+      <div class="card-tong5">
+        <div class="card-img5">
+          <img
+            src="https://s199.imacdn.com/tt24/2021/10/30/47ff33182df2f70c_8daec582137d9d4f_26698163558364829674.jpg"
+            alt=""
+          />
+          <div class="name5">
+            <p>1.018 lượt xem</p>
+          </div>
+        </div>
+        <div class="card-img5">
+          <img
+            src="https://s199.imacdn.com/tt24/2022/07/29/b6b76eeb567e6f4c_c70755cf3b535a2d_28523165908214979674.jpg"
+            alt=""
+          />
+          <div class="name5">
+            <h4>[Bản Quyền]</h4>
+            <p>1.018 lượt xem</p>
+          </div>
+        </div>
+        <div class="card-img5">
+          <img
+            src="https://s199.imacdn.com/tt24/2022/03/10/43a7a1ee3d77e613_b25baeb0c3962212_35210164690142149674.jpg"
+            alt=""
+          />
+          <div class="name5">
+            <h4>[Bản Quyền]</h4>
+            <p>1.018 lượt xem</p>
+          </div>
+        </div>
+        <div class="card-img5">
+          <img
+            src="https://s199.imacdn.com/tt24/2020/03/26/94cdf6ec5a01537d_b28b9a7c8449aac0_327681585241518445957.jpg  "
+            alt=""
+          />
+          <div class="name5">
+            <h4>[Bản Quyền]</h4>
+            <p>1.018 lượt xem</p>
+          </div>
+        </div>
+        <div class="card-img5">
+          <img
+            src="https://s199.imacdn.com/tt24/2022/03/29/bd8b8eb696ec29c7_f52238d7ab9bad48_25131164853253919674.jpg"
+            alt=""
+          />
+          <div class="name5">
+            <h4>[Bản Quyền]</h4>
+            <p>1.018 lượt xem</p>
+          </div>
+        </div>
+        <div class="card-img5">
+          <img
+            src="https://s199.imacdn.com/tt24/2020/02/28/8d6d35f1c174751e_35b873941cbe1e6f_52428158288498841.jpg"
+            alt=""
+          />
+          <div class="name5">
+            <h4>[Bản Quyền]</h4>
+            <p>1.018 lượt xem</p>
+          </div>
+        </div>
+      </div>
+      <h1>Bộ Sưu Tập</h1>
+      <div class="card-tong6">
+        <img
+          src="https://s199.imacdn.com/vg/2022/09/02/a17fad944d3cecc5_5ab5fdd64a7f94fd_30967166205716499674.jpg"
+          alt=""
+        />
+        <img
+          src="https://s199.imacdn.com/vg/2022/06/10/09dd799dff4a355b_a6b32d115628ac50_40892165484315239674.jpg"
+          alt=""
+        />
+        <img
+          src="https://s199.imacdn.com/vg/2022/03/05/803583cba5d569c2_3c4ab828e8e763bd_117964164647297779674.jpg"
+          alt=""
+        />
+        <img
+          src="https://s199.imacdn.com/vg/2021/12/27/447d92824ddb9779_f3207425776138e9_98651164059040319674.jpg"
+          alt=""
+        />
+      </div>
+      <h1>Anime Movie</h1>
+      <div class="card-tong3">
+        <div class="card-img3">
+          <img
+            src="https://s199.imacdn.com/vg/2022/08/24/af500856ed25b8d3_a8c1bbbf4daacd1f_3895216613168127118684.jpg"
+            alt=""
+          />
+          <div class="name3">
+            <h4>[Bản Quyền]</h4>
+            <p>1.018 lượt xem</p>
+          </div>
+        </div>
+        <div class="card-img3">
+          <img
+            src="https://s199.imacdn.com/vg/2022/08/23/d95581d14a3a186a_59d68e9c8aa99681_2515816612512696118684.jpg"
+            alt=""
+          />
+          <div class="name3">
+            <h4>[Bản Quyền]</h4>
+            <p>1.018 lượt xem</p>
+          </div>
+        </div>
+        <div class="card-img3">
+          <img
+            src="https://s199.imacdn.com/vg/2022/08/17/48cc6a8bbc4695e7_98bd8b034621f587_3741816607515005185710.jpg"
+            alt=""
+          />
+          <div class="name3">
+            <h4>[Bản Quyền]</h4>
+            <p>1.018 lượt xem</p>
+          </div>
+        </div>
+        <div class="card-img3">
+          <img
+            src="https://s199.imacdn.com/vg/2022/05/17/43fe43de19a7e9a0_46caf64600e28459_3566916527819018118684.jpg"
+            alt=""
+          />
+          <div class="name3">
+            <h4>[Bản Quyền]</h4>
+            <p>1.018 lượt xem</p>
+          </div>
+        </div>
+        <div class="card-img3">
+          <img
+            src="https://s199.imacdn.com/vg/2022/05/10/f5cbf7851820a58d_370e0ad8022e42ce_3471316521755813118684.jpg"
+            alt=""
+          />
+          <div class="name3">
+            <h4>[Bản Quyền]</h4>
+            <p>1.018 lượt xem</p>
+          </div>
+        </div>
+        <div class="card-img3">
+          <img
+            src="https://s199.imacdn.com/vg/2022/05/10/2ec92af947e34d07_def5488874fff15f_4684516521757167118684.jpg"
+            alt=""
+          />
+          <div class="name3">
+            <h4>[Bản Quyền]</h4>
+            <p>1.018 lượt xem</p>
+          </div>
+        </div>
+      </div>
+      <h1>Hôm Nay Xem gì</h1>
+      <div class="card-tong7">
+        <div class="card-img">
+          <img
+            src="https://s199.imacdn.com/vg/2016/10/14/3ed15afebc80ceae_7b7faf7a1a3c16be_41625147646132689674.jpg"
+            alt=""
+          />
+          <div class="name">
+            <p>Jashin-chan</p>
+            <div class="tap">
+              <p>Tập 33</p>
+              <p>3,213 lượt xem</p>
+            </div>
+          </div>
+        </div>
+        <div class="card-img">
+          <img
+            src="https://s199.imacdn.com/vg/2021/08/16/5e6f25e882a6af88_93bffd925c03bbe7_44863162911725059674.jpg"
+            alt=""
+          />
+          <div class="name">
+            <p>Isekai Meikyuu</p>
+            <div class="tap">
+              <p>Tập 10</p>
+              <p>2,210 lượt xem</p>
+            </div>
+          </div>
+        </div>
+        <div class="card-img">
+          <img
+            src="https://s199.imacdn.com/vg/2022/06/14/8794425ff5873220_3d8ecfef7dcfc538_17556716551437265118684.jpg"
+            alt=""
+          />
+          <div class="name">
+            <p>Made in Abyss</p>
+            <div class="tap">
+              <p>Tập 23</p>
+              <p>2,123 lượt xem</p>
+            </div>
+          </div>
+        </div>
+        <div class="card-img">
+          <img
+            src="https://s199.imacdn.com/vg/2017/08/28/5cd12b464a185ba7_c40e97e9916b4690_26317150391042099674.jpg"
+            alt=""
+          />
+          <div class="name">
+            <p>Digimon Ghost Game</p>
+            <div class="tap">
+              <p>Tập 33</p>
+              <p>2,312 lượt xem</p>
+            </div>
+          </div>
+        </div>
+        <div class="card-img">
+          <img
+            src="https://s199.imacdn.com/vg/2016/06/rewrite-thumbnail-1465888363.jpg"
+            alt=""
+          />
+          <div class="name">
+            <p>Mamahaha no Tsurego ga Motokano datta</p>
+            <div class="tap">
+              <p>Tập 11</p>
+              <p>3,123 lượt xem</p>
+            </div>
+          </div>
+        </div>
+        <div class="card-img">
+          <img
+            src="https://s199.imacdn.com/vg/2020/07/31/a5a6ac784c211d66_64f7b4b51e9ad782_52063159618679969674.jpg"
+            alt=""
+          />
+          <div class="name">
+            <p>HOverlord</p>
+            <div class="tap">
+              <p>Tập 23</p>
+              <p>3.213 lượt xem</p>
+            </div>
+          </div>
+        </div>
+        <div class="card-img">
+          <img
+            src="https://s199.imacdn.com/vg/2016/06/rewrite-thumbnail-1465888363.jpg"
+            alt=""
+          />
+          <div class="name">
+            <p>Orient</p>
+            <div class="tap">
+              <p>Tập 32</p>
+              <p>2,312 lượt xem</p>
+            </div>
+          </div>
+        </div>
+        <div class="card-img">
+          <img
+            src="https://s199.imacdn.com/vg/2015/09/lance-n-masques-large-1442567184.jpg"
+            alt=""
+          />
+          <div class="name">
+            <p>Hataraku Maou-sama!</p>
+            <div class="tap">
+              <p>Tập 12</p>
+              <p>2,313 lượt xem</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <h1>Bảng Xếp Hạng</h1>
+      <div class="card-tong8">
+        <div class="card-img8">
+          <img
+            src="https://s199.imacdn.com/vg/2019/07/26/6c040a27770ec024_ded1b5147578648e_5019215641124505185710.jpg"
+            alt=""
+          />
+          <div class="name8">
+            <p><b>Hataraku Maou-sama!</b></p>
+          </div>
+          <div class="tap8">
+            <p id="rank"><b>1</b></p>
+          </div>
+        </div>
+        <div class="card-img8">
+          <img
+            src="https://s199.imacdn.com/vg/2022/07/05/f2654afa307fab26_3bb31a41a60e5ecc_11668716570193006118684.jpg"
+            alt=""
+          />
+          <div class="name8">
+            <p><b>Hataraku Maou-sama!</b></p>
+          </div>
+          <div class="tap8">
+            <p id="rank"><b>2</b></p>
+          </div>
+        </div>
+        <div class="card-img8">
+          <img
+            src="https://s199.imacdn.com/vg/2019/11/28/b228f37ad34e99c3_c17388e0cbc7703d_15778215749473975185710.jpg"
+            alt=""
+          />
+          <div class="name8">
+            <p><b>Hataraku Maou-sama!</b></p>
+          </div>
+          <div class="tap8">
+            <p id="rank"><b>3</b></p>
+          </div>
+        </div>
+        <div class="card-img8">
+          <img
+            src="https://s199.imacdn.com/vg/2022/07/05/4c02b83db1289f7f_c574f18d3418a880_3752916570072322118684.jpg"
+            alt=""
+          />
+          <div class="name8">
+            <p><b>Hataraku Maou-sama!</b></p>
+          </div>
+          <div class="tap8">
+            <p id="rank"><b>4</b></p>
+          </div>
+        </div>
+        <div class="card-img8">
+          <img
+            src="https://s199.imacdn.com/vg/2022/05/14/34b2ee9ca5a17c55_0103e48989a34819_5267716524686427118684.jpg"
+            alt=""
+          />
+          <div class="name8">
+            <p><b>Hataraku Maou-sama!</b></p>
+          </div>
+          <div class="tap8">
+            <p id="rank"><b>5</b></p>
+          </div>
+        </div>
+        <div class="card-img8">
+          <img
+            src="https://s199.imacdn.com/vg/2020/10/03/3ac9cb0967245588_ae66a8b0a302922f_6236416017016122118684.jpg"
+            alt=""
+          />
+          <div class="name8">
+            <p><b>Hataraku Maou-sama!</b></p>
+          </div>
+          <div class="tap8">
+            <p id="rank"><b>6</b></p>
+          </div>
+        </div>
+      </div>
+      <h1>Tất Cả Anime</h1>
+       <div class="card-tong1">
+        <div class="card-img">
+          <img
+            src="https://s199.imacdn.com/vg/2015/05/hataraku-maou-sama-large-1432285001.jpg"
+            alt=""
+          />
+          <div class="name">
+            <p>Hataraku Maou-sama!</p>
+            <div class="tap">
+              <p>Tập 22</p>
+              <p>1.018 lượt xem</p>
+            </div>
+          </div>
+        </div>
+        <div class="card-img">
+          <img
+            src="https://s199.imacdn.com/vg/2022/06/07/9c540141ae3d7f05_a84d0e5d4d64dceb_34442165459032279674.jpg"
+            alt=""
+          />
+          <div class="name">
+            <p>Kumichou Musume to Sewagakari</p>
+            <div class="tap">
+              <p>Tập 10</p>
+              <p>1,166 lượt xem</p>
+            </div>
+          </div>
+        </div>
+        <div class="card-img">
+          <img
+            src="https://s199.imacdn.com/vg/2022/09/08/c7a821c0039376be_3735a9899d4994b2_2025416626135104118684.jpg"
+            alt=""
+          />
+          <div class="name">
+            <p>HaSummertime Render</p>
+            <div class="tap">
+              <p>Tập 21</p>
+              <p>2,121 lượt xem</p>
+            </div>
+          </div>
+        </div>
+        <div class="card-img">
+          <img
+            src="https://s199.imacdn.com/vg/2022/09/08/3c2ff608c4b04a67_ba62488d3167f11d_3138616626131586118684.jpg"
+            alt=""
+          />
+          <div class="name">
+            <p>Isekai Ojisan</p>
+            <div class="tap">
+              <p>Tập 7</p>
+              <p>2,192 lượt xem</p>
+            </div>
+          </div>
+        </div>
+        <div class="card-img">
+          <img
+            src="https://s199.imacdn.com/vg/2022/09/08/0e4124ea99fd25e0_091833b77ed55916_26198166257938173.jpg"
+            alt=""
+          />
+          <div class="name">
+            <p>Jashin-chan Dropkick</p>
+            <div class="tap">
+              <p>Tập 33</p>
+              <p>3,213 lượt xem</p>
+            </div>
+          </div>
+        </div>
+        <div class="card-img">
+          <img
+            src="https://s199.imacdn.com/vg/2022/09/08/be5099be295e2cdb_9042d2eabeccb537_2602316626493397118684.jpg"
+            alt=""
+          />
+          <div class="name">
+            <p>Isekai Meikyuu de Harem wo</p>
+            <div class="tap">
+              <p>Tập 10</p>
+              <p>2,210 lượt xem</p>
+            </div>
+          </div>
+        </div>
+        <div class="card-img">
+          <img
+            src="https://s199.imacdn.com/vg/2022/09/08/3e40a2585aa064e4_daf80ee72ff33bfa_2830616626267149118684.jpg"
+            alt=""
+          />
+          <div class="name">
+            <p>Made in Abyss</p>
+            <div class="tap">
+              <p>Tập 23</p>
+              <p>2,123 lượt xem</p>
+            </div>
+          </div>
+        </div>
+        <div class="card-img">
+          <img
+            src="https://s199.imacdn.com/vg/2022/09/07/1cbc441b5e100fb0_2564238f9506bb41_11587916625571307814814.jpg"
+            alt=""
+          />
+          <div class="name">
+            <p>Digimon Ghost Game</p>
+            <div class="tap">
+              <p>Tập 33</p>
+              <p>2,312 lượt xem</p>
+            </div>
+          </div>
+        </div>
+        <div class="card-img">
+          <img
+            src="https://s199.imacdn.com/vg/2022/09/08/29459e2e298bd066_1452ce9cf71f4337_3142416626382312118684.jpg"
+            alt=""
+          />
+          <div class="name">
+            <p>Mamahaha no Tsurego ga Motokano datta</p>
+            <div class="tap">
+              <p>Tập 11</p>
+              <p>3,123 lượt xem</p>
+            </div>
+          </div>
+        </div>
+        <div class="card-img">
+          <img
+            src="https://s199.imacdn.com/vg/2022/09/07/83519d38621a1cd2_76f1446e0339f443_2871116625231382118684.jpg"
+            alt=""
+          />
+          <div class="name">
+            <p>HOverlord</p>
+            <div class="tap">
+              <p>Tập 23</p>
+              <p>3.213 lượt xem</p>
+            </div>
+          </div>
+        </div>
+        <div class="card-img">
+          <img
+            src="https://s199.imacdn.com/vg/2022/09/06/9b4f6869d3d3b76b_51aafc962881e8f4_3258716624556051118684.jpg"
+            alt=""
+          />
+          <div class="name">
+            <p>Orient</p>
+            <div class="tap">
+              <p>Tập 32</p>
+              <p>2,312 lượt xem</p>
+            </div>
+          </div>
+        </div>
+        <div class="card-img">
+          <img
+            src="https://s199.imacdn.com/vg/2022/09/06/63560db151df151e_e865c4d23fed663e_3657416624546545118684.jpg"
+            alt=""
+          />
+          <div class="name">
+            <p>
+              Hataraku Maou-sama!Tensei Kenja no Isekai Life: Dai-2 no Shokugyou
+              wo Ete, Sekai Saikyou ni Narimashitaclass="tap">
+            </p>
+            <div class="tap">
+              <p>Tập 12</p>
+              <p>2,313 lượt xem</p>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
