--- a/lab4/hwork4.html
+++ b/lab4/hwork4.html
@@ -12,6 +12,24 @@
     />
   </head>
   <body>
+    <div class="able">
+      <div class="logo">
+        <img src="/assets/img/logo_v8.png" alt="vuighe.net" />
+      </div>
+      <div class="menu">
+        <div class="menu-anime">
+          <ul>
+            
+          </ul>
+        </div>
+        <div class="menu-shop"></div>
+        <div class="menu-news"></div>
+        <div class="name-story"></div>
+        <div class="name-bxh"></div>
+      </div>
+      <div class="seach"></div>
+      <div class="log"></div>
+    </div>
     <div class="tong">
       <a href="https://vuighe.net/tap-moi-nhat">
         <h1>Tập Mới Nhất</h1>
@@ -787,7 +805,7 @@
             <p><b>Hataraku Maou-sama!</b></p>
           </div>
           <div class="tap8">
-            <p ><b>4</b></p>
+            <p><b>4</b></p>
           </div>
         </div>
         <div class="card-img8">
@@ -811,12 +829,12 @@
             <p><b>Hataraku Maou-sama!</b></p>
           </div>
           <div class="tap8">
-            <p ><b>6</b></p>
+            <p><b>6</b></p>
           </div>
         </div>
       </div>
       <h1>Tất Cả Anime</h1>
-       <div class="card-tong1">
+      <div class="card-tong1">
         <div class="card-img">
           <img
             src="https://s199.imacdn.com/vg/2015/05/hataraku-maou-sama-large-1432285001.jpg"
