--- a/ktra/ktra.html
+++ b/ktra/ktra.html
@@ -19,7 +19,7 @@
           <div class="logo">
             <a
               href="http://unvab.com/snow-free-html/index.html"
-              class="logo-link"
+              class="logo-link position-relative"
               ><img
                 src="http://unvab.com/snow-free-html/assets/images/logo.svg"
                 alt=""
