--- a/ktra/ktra.html
+++ b/ktra/ktra.html
@@ -18,7 +18,7 @@
         <div class="container flex justify-between align-center">
           <div class="logo">
             <a
-              href="http://unvab.com/snow-free-html/index.html"
+              href="relative unvab.com/snow-free-html/index.html"
               class="logo-link position-relative"
               ><img
                 src="http://unvab.com/snow-free-html/assets/images/logo.svg"
