--- a/ktra/ktra.html
+++ b/ktra/ktra.html
@@ -18,10 +18,11 @@
         <div class="container flex justify-between align-center">
           <div class="logo">
             <a
-              href="relative unvab.com/snow-free-html/index.html"
+              href="http://unvab.com/snow-free-html/index.html"
               class="logo-link position-relative"
               ><img
-                src="http://unvab.com/snow-free-html/assets/images/logo.svg"
+                class="position-relative"
+                src="unvab.com/snow-free-html/assets/images/logo.svg"
                 alt=""
               />
             </a>
