--- a/ktra/ktra.html
+++ b/ktra/ktra.html
@@ -18,11 +18,10 @@
         <div class="container flex justify-between align-center">
           <div class="logo">
             <a
-              href="http://unvab.com/snow-free-html/index.html"
+              href="unvab.com/snow-free-html/index.html"
               class="logo-link position-relative"
               ><img
-                class="position-relative"
-                src="unvab.com/snow-free-html/assets/images/logo.svg"
+                src="http://unvab.com/snow-free-html/assets/images/logo.png"
                 alt=""
               />
             </a>
