--- a/ktra/ktra.html
+++ b/ktra/ktra.html
@@ -21,7 +21,7 @@
               href="unvab.com/snow-free-html/index.html"
               class="logo-link position-relative"
               ><img
-                src="http://unvab.com/snow-free-html/assets/images/logo.png"
+                src="http://unvab.com/snow-free-html/assets/images/logo.svg"
                 alt=""
               />
             </a>
