--- a/ktra/ktra.html
+++ b/ktra/ktra.html
@@ -11,10 +11,10 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css"
     />
-    <link rel="stylesheet" href="avatar-1.jpg" />
-    <link rel="stylesheet" href="avatar-2.jpg" />
-    <link rel="stylesheet" href="avatar-3.jpg" />
-    <link rel="stylesheet" href="logo.svg" />
+    <link rel="images" href="avatar-1.jpg" />
+    <link rel="images" href="avatar-2.jpg" />
+    <link rel="images" href="avatar-3.jpg" />
+    <link rel="icon" href="logo.svg" />
   </head>
   <body>
     <header class="header">
@@ -124,7 +124,7 @@
         <h2>COMMENTS</h2>
         <div class="cmt-item">
           <div class="cmt-use">
-            <img src="images/avatar-1" alt="" />
+            <img src="images/avatar-1.jpg" alt="" />
           </div>
           <div class="cmt-cmt">
             <div class="cmt-cmt-name">
