--- a/ktra/ktra.html
+++ b/ktra/ktra.html
@@ -24,10 +24,7 @@
             <a
               href="unvab.com/snow-free-html/index.html"
               class="logo-link position-relative"
-              ><img
-                src="http://unvab.com/snow-free-html/assets/images/logo.svg"
-                alt=""
-              />
+              ><img src="logo.svg" alt="" />
             </a>
           </div>
           <div class="list">
@@ -124,7 +121,7 @@
         <h2>COMMENTS</h2>
         <div class="cmt-item">
           <div class="cmt-use">
-            <img src="images/avatar-1.jpg" alt="" />
+            <img src="avatar-1.jpg" alt="" />
           </div>
           <div class="cmt-cmt">
             <div class="cmt-cmt-name">
@@ -142,7 +139,7 @@
         </div>
         <div class="cmt-item jody">
           <div class="cmt-use">
-            <img src="images/avatar-2.jpg" alt="" />
+            <img src="avatar-2.jpg" alt="" />
           </div>
           <div class="cmt-cmt">
             <div class="cmt-cmt-name">
@@ -160,7 +157,7 @@
         </div>
         <div class="cmt-item">
           <div class="cmt-use">
-            <img src="images/avatar-3.jpg" alt="" />
+            <img src="avatar-3.jpg" alt="" />
           </div>
           <div class="cmt-cmt">
             <div class="cmt-cmt-name">
