--- a/ktra/ktra.html
+++ b/ktra/ktra.html
@@ -11,6 +11,10 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css"
     />
+    <link rel="stylesheet" href="avatar-1.jpg" />
+    <link rel="stylesheet" href="avatar-2.jpg" />
+    <link rel="stylesheet" href="avatar-3.jpg" />
+    <link rel="stylesheet" href="logo.svg" />
   </head>
   <body>
     <header class="header">
@@ -120,10 +124,12 @@
         <h2>COMMENTS</h2>
         <div class="cmt-item">
           <div class="cmt-use">
-            <img
-              src="http://unvab.com/snow-free-html/assets/images/avatar-1.jpg"
-              alt=""
-            />
+            <figure>
+              <img
+                src="http://unvab.com/snow-free-html/assets/images/avatar-1.jpg"
+                alt=""
+              />
+            </figure>
           </div>
           <div class="cmt-cmt">
             <div class="cmt-cmt-name">
