--- a/ktra/ktra.html
+++ b/ktra/ktra.html
@@ -125,10 +125,7 @@
         <div class="cmt-item">
           <div class="cmt-use">
             <figure>
-              <img
-                src="http://unvab.com/snow-free-html/assets/images/avatar-1.jpg"
-                alt=""
-              />
+              <img src="images/avatar-1.jpg" alt="" />
             </figure>
           </div>
           <div class="cmt-cmt">
