--- a/ktra/ktra.html
+++ b/ktra/ktra.html
@@ -124,9 +124,7 @@
         <h2>COMMENTS</h2>
         <div class="cmt-item">
           <div class="cmt-use">
-            <figure>
-              <img src="images/avatar-1.jpg" alt="" />
-            </figure>
+            <img src="images/avatar-1" alt="" />
           </div>
           <div class="cmt-cmt">
             <div class="cmt-cmt-name">
@@ -144,10 +142,7 @@
         </div>
         <div class="cmt-item jody">
           <div class="cmt-use">
-            <img
-              src="http://unvab.com/snow-free-html/assets/images/avatar-2.jpg"
-              alt=""
-            />
+            <img src="images/avatar-2.jpg" alt="" />
           </div>
           <div class="cmt-cmt">
             <div class="cmt-cmt-name">
@@ -165,10 +160,7 @@
         </div>
         <div class="cmt-item">
           <div class="cmt-use">
-            <img
-              src="http://unvab.com/snow-free-html/assets/images/avatar-3.jpg"
-              alt=""
-            />
+            <img src="images/avatar-3.jpg" alt="" />
           </div>
           <div class="cmt-cmt">
             <div class="cmt-cmt-name">
