--- a/ktra/ktra.html
+++ b/ktra/ktra.html
@@ -14,7 +14,8 @@
     <link rel="images" href="avatar-1.jpg" />
     <link rel="images" href="avatar-2.jpg" />
     <link rel="images" href="avatar-3.jpg" />
-    <link rel="icon" href="logo.svg" />
+    <link rel="images" href="logo.jpg" />
+    <link rel="images" href="post-6.jpg" />
   </head>
   <body>
     <header class="header">
@@ -24,7 +25,7 @@
             <a
               href="unvab.com/snow-free-html/index.html"
               class="logo-link position-relative"
-              ><img src="logo.svg" alt="" />
+              ><img src="logo.jpg" alt="" />
             </a>
           </div>
           <div class="list">
@@ -59,10 +60,7 @@
       </nav>
     </header>
     <div class="bg">
-      <img
-        src="http://unvab.com/snow-free-html/assets/images/post-6.jpg"
-        alt=""
-      />
+      <img src="post-6.jpg" alt="" />
     </div>
     <div class="card-doc">
       <div class="doc">
