--- a/lab6/tb.html
+++ b/lab6/tb.html
@@ -20,6 +20,16 @@
             <button>Miền Trung</button>
             <button>Miền Nam</button>
           </div>
+          <div class="table">
+            <table>
+              <caption></caption>
+              <thead>
+                
+              </thead>
+              <tbody></tbody>
+              <tfoot></tfoot>
+            </table>
+          </div>
         </div>
       </nav>
     </header>
