--- a/ktra/ktra.html
+++ b/ktra/ktra.html
@@ -230,7 +230,7 @@
           </div>
         </div>
         <div class="uv flex justify-center">
-          2016 © Design by Unvab. Code by nK
+          2016 © Design by Unvab. Code by nKn
         </div>
       </div>
     </div>
