--- a/lab6/tb.html
+++ b/lab6/tb.html
@@ -23,11 +23,98 @@
           <div class="table">
             <table>
               <caption></caption>
-              <thead>
-                
+              <thead aria-colspan="12">
+                <div class="card">
+                  <div class="flex justify-between margin">
+                    <div><i class="bi bi-printer-fill"></i></div>
+                    <div style="color: rgba(126, 3, 3, 0.952)">
+                      <h1>XỔ SỐ TRUYỀN THỐNG</h1>
+                    </div>
+                    <div><i class="bi bi-volume-up-fill"></i></div>
+                  </div>
+                  <div class="flex justify-center">Thứ tư ngày 21-09-2022</div>
+                </div>
               </thead>
-              <tbody></tbody>
-              <tfoot></tfoot>
+              <tbody>
+                <tr>
+                  <th>Ký tự</th>
+                  <td colspan="12">15DK-9DK-14DK-5DK-2DK-7DK</td>
+                </tr>
+                <tr>
+                  <th>Đặc biệt</th>
+                  <td id="td" colspan="12"><h1>44823</h1></td>
+                </tr>
+                <tr>
+                  <th>Giải nhất</th>
+                  <td colspan="12">04642</td>
+                </tr>
+                <tr>
+                  <th>Giải nhì</th>
+                  <td colspan="6">28539</td>
+                  <td colspan="6">54322</td>
+                </tr>
+
+                <tr>
+                  <th rowspan="2">Giải ba</th>
+                  <td colspan="4">2341</td>
+                  <td colspan="4">43252</td>
+                  <td colspan="4">54344</td>
+                </tr>
+                <tr>
+                  <td colspan="4">54332</td>
+                  <td colspan="4">54245</td>
+                  <td colspan="4">32567</td>
+                </tr>
+                <tr>
+                  <th>Giải tư</th>
+                  <td colspan="3">4614</td>
+                  <td colspan="3">4614</td>
+                  <td colspan="3">4614</td>
+                  <td colspan="3">4614</td>
+                </tr>
+                <tr>
+                  <th rowspan="2">Giải năm</th>
+                  <td colspan="4">2341</td>
+                  <td colspan="4">43252</td>
+                  <td colspan="4">54344</td>
+                </tr>
+                <td colspan="4">54332</td>
+                <td colspan="4">54245</td>
+                <td colspan="4">32567</td>
+              </tbody>
+              <tr>
+                <th>Giải sáu</th>
+                <td colspan="4">2341</td>
+                <td colspan="4">43252</td>
+                <td colspan="4">54344</td>
+              </tr>
+              <tr>
+                <th>Giải bảy</th>
+                <td colspan="3">4614</td>
+                <td colspan="3">4614</td>
+                <td colspan="3">4614</td>
+                <td colspan="3">4614</td>
+              </tr>
+              <div class="flex">
+                <tr>
+                  <th colspan="12">
+                    <div class="form flex justify-center ">
+                      <p>Chỉ hiển thị:</p>
+                      <form action="">
+                        <label for="">
+                          <input name="radio" type="radio" /> 2 chữ số
+                        </label>
+                        <label for=""
+                          ><input name="radio" type="radio" /> 3 chữ số</label
+                        >
+                        <label for=""
+                          ><input name="radio" type="radio" />Đầy đủ</label
+                        >
+              </div>
+                    </form>
+                  </div>
+                </th>
+              </tr>
             </table>
           </div>
         </div>
