--- a/lab9/index.html
+++ b/lab9/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <div class="box"></div>
+    <h1>2222071013333 MB</h1>
+    <script src="index.js"></script>
   </body>
 </html>
